
2.7 - 9/20/2012 - Aaron Edwards
----------------------------------------------------------------------
- Include shopping cart item details in orders CSV exports
- fix special instructions in CSV order exports
- Add special instructions to admin new order notification
- Support ecommerce tracking with our Google Analytics plugin on multisite
- Urlencode paypal url fields to support utf8 store slugs
- Fix an error and debug code in PayPal Express gateway
- Fix custom message showing in cart widget when empty: http://premium.wpmudev.org/forums/topic/shopping-cart-page-message-repeating-in-shopping-cart-widget
- Fix hooks for Affiliate plugin integration with Manual Payments gateway. Props @Rystraum!
- iDeal gateway bugfixes

2.6.4 - 9/04/2012 - Aaron Edwards
----------------------------------------------------------------------
- Important bugfix with saving Extra Shipping costs and Weights
- Fix bugs in iDeal gateway: http://premium.wpmudev.org/forums/topic/ideal-making-it-work

2.6.3 - 8/29/2012 - Aaron Edwards
----------------------------------------------------------------------
- Add Schema.org microdata to products for SEO, props @aristath!
- Add "from" price label to listings of multiple variation products
- Add cart message even when its empty
- Many many php notice fixes
- Fix major issues with new sites and coupons
- Fix coupons with a number as the code
- Fix rewrite flushing when changing store slugs
- Fix a stripslashes issue with email settings
- Fix unchecking of personalization checkboxes bug
- Fix outdated product urls in orderstatus after slug changes

2.6.2 - 7/13/2012 - Aaron Edwards/Arnold Bailey
----------------------------------------------------------------------
- Added per shipment handling charge to USPS, one for domestic and one for international shipping.
- Add Argentina and Brazil to PayPal gateway countries
- Add SKU's to new order emails
- Fix issue with category dropdown widget displaying all products